# wofl

./: .gitignore  Wofl.sln
Neuro/: CMakeLists.txt  Neuro.vcxproj  Neuro.vcxproj.filters
Neuro/Binaries/: MakeBuild.bat  neurocrk.bat
Neuro/Neuro/: AppDelegate.h  AppDelegate.mm  NeuroGame.cpp  Readme.txt  Textbox.cpp  Textbox.h  main.m
Neuro/Neuro.xcodeproj/: project.pbxproj
Neuro/Neuro.xcodeproj/xcshareddata/xcschemes/: Neuro.xcscheme
Neuro/Neuro.xcodeproj/xcuserdata/josh.adams.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Neuro/Neuro/Art/Bettws/: Bettws.tps
Neuro/Neuro/Art/Packer/: Basele.xcf  Neuro.tps  background.xcf
Neuro/Neuro/Art/System/: System.tps
Neuro/Neuro/Base.lproj/: Main.storyboard
Neuro/Neuro/Game/: NeuroConfig.cpp  NeuroConfig.h  NeuroGame.cpp  NeuroGame.h  NeuroLua.cpp  NeuroLua.h  NeuroLua.h.orig  NeuroState.cpp  NeuroState.h
Neuro/Neuro/Resources/: Chatsubo.lua  Neuro.lua  Neuro1.json  Neuro2.json  PAX.lua  data.json
Neuro/Neuro/Resources/Bettws/: Bettws1.json
Neuro/Neuro/Resources/Lua/: BodyShop.lua  Chatsubo.lua  Cheapo.lua  Gridbox.lua  IRS.lua  InvBox.lua  Items.lua  Loser.lua  MiscBoxes.lua  MiscRooms.lua  Neuro.lua  PAX.lua  RegFellow.lua  Room.lua  Site.lua  Streets.lua
Neuro/Neuro/Resources/Neuromancer/: Neuro1.json  Neuro2.json  Neuro3.json
Neuro/Neuro/Resources/System/: System1.json
Neuro/Neuro/UI/: Gridbox.cpp  Gridbox.h  NeuroScene.cpp  NeuroScene.h  Ninebox.cpp  Ninebox.h  Textbox.cpp  Textbox.h
Neuro/Neuro/UI/Boxes/: InvBox.cpp  InvBox.h  PAXBox.cpp  PAXBox.h  SiteBox.cpp  SiteBox.h
Neuro/lua/: lua.h
(+229 files in other folders)
